--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FBE106"
+    android:backgroundTint="#FBE106"
     tools:context=".MainActivity">
 
     <TextView
@@ -13,37 +15,43 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="60dp"
         android:layout_marginRight="20dp"
-        android:text="Memory Game"
-        android:textSize="24sp"
+        android:fontFamily="@font/changa_one"
+        android:text="@string/title_m"
+        android:textColor="@android:color/secondary_text_light"
+        android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView_m"
-        android:layout_width="163dp"
-        android:layout_height="186dp"
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/brain_m"
+        android:layout_width="259dp"
+        android:layout_height="268dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
+        android:src="@drawable/brain_jar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleView_m"
-        app:srcCompat="@drawable/brain" />
+        app:srcCompat="@drawable/brain_jar" />
 
     <Button
         android:id="@+id/buttonStart_m"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
-        android:text="START"
-        android:textSize="24sp"
+        android:backgroundTint="#00FFFFFF"
+        android:fontFamily="@font/changa_one"
+        android:text="@string/startBtn"
+        android:textColor="@android:color/secondary_text_light"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_m" />
+        app:layout_constraintTop_toBottomOf="@+id/brain_m" />
 
     <Button
         android:id="@+id/buttonScore_m"
@@ -51,9 +59,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginBottom="30dp"
-        android:text="SCORE"
-        android:textSize="24sp"
+        android:layout_marginBottom="50dp"
+        android:backgroundTint="#00FFFFFF"
+        android:fontFamily="@font/changa_one"
+        android:text="@string/scoreBtn"
+        android:textColor="@android:color/secondary_text_light"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
