--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FBE106"
-    android:backgroundTint="#FBE106"
+    android:background="@color/colorYellow"
     tools:context=".MainActivity">
 
     <TextView
@@ -18,7 +17,7 @@
         android:fontFamily="@font/changa_one"
         android:text="@string/title_m"
         android:textColor="@android:color/secondary_text_light"
-        android:textSize="30sp"
+        android:textSize="35sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -45,7 +44,8 @@
         android:layout_marginEnd="50dp"
         android:backgroundTint="#00FFFFFF"
         android:fontFamily="@font/changa_one"
-        android:text="@string/startBtn"
+        android:onClick="onClickGame"
+        android:text="@string/startBtn_m"
         android:textColor="@android:color/secondary_text_light"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,7 +62,8 @@
         android:layout_marginBottom="50dp"
         android:backgroundTint="#00FFFFFF"
         android:fontFamily="@font/changa_one"
-        android:text="@string/scoreBtn"
+        android:onClick="onClickScore"
+        android:text="@string/scoreBtn_m"
         android:textColor="@android:color/secondary_text_light"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
