--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:fontFamily="@font/changa_one"
         android:text="@string/title_m"
         android:textColor="@android:color/secondary_text_light"
-        android:textSize="35sp"
+        android:textSize="40sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -42,6 +42,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
+        android:layout_marginBottom="150dp"
         android:backgroundTint="#00FFFFFF"
         android:fontFamily="@font/changa_one"
         android:onClick="onClickGame"
@@ -58,8 +59,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="130dp"
         android:backgroundTint="#00FFFFFF"
         android:fontFamily="@font/changa_one"
         android:onClick="onClickScore"
@@ -70,5 +72,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonStart_m" />
+
+    <Button
+        android:id="@+id/buttonAbout_m"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="50dp"
+        android:backgroundTint="#00FFFFFF"
+        android:fontFamily="@font/changa_one"
+        android:onClick="onClickAbout"
+        android:text="@string/aboutBtn_m"
+        android:textColor="@android:color/secondary_text_light"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonScore_m" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
