janela para escolher a dificuldade janela de confirmação para sair

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorYellow">#FBE106</color>
+    <color name="brainPink">#F27B96</color>
 </resources>
