--- a/app/src/main/res/layout/activity_username.xml
+++ b/app/src/main/res/layout/activity_username.xml
@@ -50,7 +50,7 @@
         android:hint="Insert new username"
         android:inputType="text"
         android:maxLines="1"
-        android:popupBackground="@color/browser_actions_text_color"
+        android:backgroundTint="@color/brainPink"
         android:textCursorDrawable="@null"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -137,11 +137,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textName5">
 
         <TextView
             android:layout_width="wrap_content"
@@ -150,7 +152,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
             android:fontFamily="@font/changa_one"
-            android:text="Difficulty"
+            android:text="Game Theme"
             android:textColor="@android:color/primary_text_light_nodisable"
             android:textSize="22sp" />
 
@@ -159,21 +161,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/changa_one"
-            android:text="Fácil(3x4)" />
+            android:text="Car Brands"
+            android:buttonTint="@color/brainPink"
+            android:buttonTintMode="src_in"/>
 
         <RadioButton
             android:id="@+id/radioBMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/changa_one"
-            android:text="Médio(4x4)" />
+            android:text="Social Networks"
+            android:buttonTint="@color/brainPink"
+            android:buttonTintMode="src_in"/>
 
         <RadioButton
             android:id="@+id/radioBHard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/changa_one"
-            android:text="Difícil(5x4)" />
+            android:text="Electronic Symbols"
+            android:buttonTint="@color/brainPink"
+            android:buttonTintMode="src_in"/>
 
     </RadioGroup>
 
