--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -21,6 +21,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:id="@+id/lineView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -31,6 +32,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -39,6 +41,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -47,6 +50,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -55,10 +59,12 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/lineView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -69,6 +75,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -77,6 +84,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -85,6 +93,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -93,11 +102,13 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/lineView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -108,6 +119,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -116,6 +128,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -124,6 +137,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -132,11 +146,13 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/lineView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -147,6 +163,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -155,6 +172,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -163,6 +181,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -171,9 +190,53 @@
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:padding="10dp"
+                android:clickable="true"
                 app:srcCompat="@drawable/carta_back" />
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/lineView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/cardView17"
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:clickable="true"
+                app:srcCompat="@drawable/carta_back" />
+
+            <ImageView
+                android:id="@+id/cardView18"
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:clickable="true"
+                app:srcCompat="@drawable/carta_back" />
+
+            <ImageView
+                android:id="@+id/cardView19"
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:clickable="true"
+                app:srcCompat="@drawable/carta_back" />
+
+            <ImageView
+                android:id="@+id/cardView20"
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:layout_weight="1"
+                android:padding="10dp"
+                android:clickable="true"
+                app:srcCompat="@drawable/carta_back" />
+
+        </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
