--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -55,6 +55,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -64,6 +65,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -73,6 +75,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -82,6 +85,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
         </LinearLayout>
 
@@ -98,6 +102,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -107,6 +112,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -116,6 +122,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -125,6 +132,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
         </LinearLayout>
@@ -142,6 +150,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -151,6 +160,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -160,6 +170,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -169,6 +180,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
         </LinearLayout>
@@ -186,6 +198,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -195,6 +208,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -204,6 +218,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -213,6 +228,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
         </LinearLayout>
@@ -230,6 +246,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -239,6 +256,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -248,6 +266,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -257,6 +276,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:clickable="true"
+                android:onClick="onClick"
                 app:srcCompat="@drawable/carta_back" />
 
         </LinearLayout>
