--- a/app/src/main/res/layout/activity_username.xml
+++ b/app/src/main/res/layout/activity_username.xml
@@ -17,7 +17,7 @@
         android:backgroundTint="#00FFFFFF"
         android:fontFamily="@font/changa_one"
         android:onClick="onClickGame"
-        android:text="OK"
+        android:text="@string/okBtn_u"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
         android:backgroundTint="#00FFFFFF"
         android:fontFamily="@font/changa_one"
         android:onClick="mainWindow"
-        android:text="Cancel"
+        android:text="@string/cancelBtn_u"
         android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/buttonOK_m"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/changa_one"
-        android:hint="Insert player 1 name"
+        android:hint="@string/player1Hint_u"
         android:inputType="text"
         android:maxLines="1"
         android:backgroundTint="@color/brainPink"
@@ -66,7 +66,7 @@
         android:layout_marginEnd="20dp"
         android:backgroundTint="@color/brainPink"
         android:fontFamily="@font/changa_one"
-        android:hint="Insert player 2 name"
+        android:hint="@string/player2Hint_u"
         android:inputType="text"
         android:maxLines="1"
         android:textCursorDrawable="@null"
@@ -198,7 +198,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
             android:fontFamily="@font/changa_one"
-            android:text="Game Theme"
+            android:text="@string/game_theme_u"
             android:textColor="@android:color/primary_text_light_nodisable"
             android:textSize="22sp" />
 
@@ -209,7 +209,7 @@
             android:buttonTint="@color/brainPink"
             android:buttonTintMode="src_in"
             android:fontFamily="@font/changa_one"
-            android:text="Car Brands"
+            android:text="@string/radioBtn1_u"
             android:tag="cars"
             android:textSize="18sp" />
 
@@ -220,7 +220,7 @@
             android:buttonTint="@color/brainPink"
             android:buttonTintMode="src_in"
             android:fontFamily="@font/changa_one"
-            android:text="Social Networks"
+            android:text="@string/radioBtn2_u"
             android:tag="networks"
             android:textSize="18sp" />
 
@@ -231,7 +231,7 @@
             android:buttonTint="@color/brainPink"
             android:buttonTintMode="src_in"
             android:fontFamily="@font/changa_one"
-            android:text="Electronic Symbols"
+            android:text="@string/radioBtn3_u"
             android:tag="electronics"
             android:textSize="18sp" />
 
