--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -28,6 +28,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
+    <TextView
+    android:id="@+id/textTimer"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
+    android:layout_marginEnd="20dp"
+    android:fontFamily="@font/changa_one"
+    android:textSize="25sp"
+    android:text="timer"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textTimerLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="20dp"
+        android:text="Time left:"
+        android:fontFamily="@font/changa_one"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toStartOf="@+id/textTimer"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -73,9 +97,9 @@
                 android:layout_width="200dp"
                 android:layout_height="100dp"
                 android:layout_weight="1"
-                android:padding="10dp"
                 android:clickable="true"
                 android:onClick="onClick"
+                android:padding="10dp"
                 app:srcCompat="@drawable/carta_back" />
 
             <ImageView
@@ -282,4 +306,7 @@
         </LinearLayout>
 
     </LinearLayout>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
