--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -25,27 +25,30 @@
     <LinearLayout
         android:id="@+id/linearListViews"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="110dp"
+        android:layout_height="0dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="100dp"
-        android:layout_marginStart="10dp"
-        android:weightSum="3"
         android:baselineAligned="false"
-        app:layout_constraintTop_toBottomOf="@id/titleView_m"
+        android:weightSum="3"
         app:layout_constraintBottom_toTopOf="@id/adView_s"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleView_m">
 
         <ListView
             android:id="@+id/listNames"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:layout_marginLeft="20dp"/>
 
         <ListView
             android:id="@+id/listScores"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2"/>
+            android:layout_weight="2" />
 
     </LinearLayout>
 
